--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         <h1>Il mio viaggio a Londra</h1>
-        <img src="1.jpg"><img src="3.jpg"><img src="2.jpg">
+        <img src="img/1.jpg"><img src="img/3.jpg"><img src="img/2.jpg">
     </body>
     
     <hr>
